Attempt to fix position of dropdown menu on mobile screen

--- a/Styles.css
+++ b/Styles.css
@@ -188,7 +188,9 @@ div h3:nth-child(3) {
 }
 
 .logo-style {
-    max-width: 40px;
+    width: 40px;
+    max-height: 40px;
+    border-radius: 8px;
     display: inline-block;
     vertical-align: middle;
     box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.6);
@@ -253,11 +255,11 @@ div h3:nth-child(3) {
         font-weight: 600;
         padding-top: 10px;
         padding-bottom: 10px;
-        background-color: #02436c;
+        background-color: #00425A;
     }
 
     #dropdown-box {
-        position: fixed;
+        position: absolute;
         width: 90%;
         z-index: 10;
     }
